--- a/quickHelp_HelpCenter_HavingTroubleConnecting.html
+++ b/quickHelp_HelpCenter_HavingTroubleConnecting.html
@@ -289,15 +289,7 @@
             <p>If you have not updated your NOOK software since June of 2018, please review this detailed article on how to get your device on the latest version.</p>
             <p>If your NOOK's software is up-to-date and you are having trouble accessing content, we ask that you visit: (Trouble Accessing eBooks?)</p>
             <div class="video_Container">
-                <video autoplay controls muted loop preload="auto" width="1180">
-                    <source src="mp4/TLS_2019.mp4" type="video/mp4">
-                </video>
-                <video autoplay controls muted loop preload="auto" width="720">
-                    <source src="mp4/TLS_2019.mp4" type="video/mp4">
-                </video>
-                <video autoplay controls muted loop preload="auto" width="260">
-                    <source src="mp4/TLS_2019.mp4" type="video/mp4">
-                </video>
+                <img src="images/video.png" alt="videoImg">
             </div>
             <p>As of June 29th, 2018, all internet connected devices were upgraded to new security standards, known as Transport Layer Security (TLS). TLS Versions below 1.2 were phased out, and devices accessing the Internet that are not updated to utilize the required TLS Version will not be able to perform many functions related to Internet connectivity.</p>
             <p>If your NOOK Device is not updated to meet these new TLS security standards, you will not be able to make any purchases, or download and manage your NOOK Content from your NOOK Device.</p>
