--- a/quickHelp_HelpCenter_BNPress_ebook_FormattingGuidelines.html
+++ b/quickHelp_HelpCenter_BNPress_ebook_FormattingGuidelines.html
@@ -368,7 +368,7 @@
             <p>As defined by the International Digital Publishing Forum (IDPF), ".epub" is the file extension of an XML format for reflowable digital books and publications. ".epub" is composed of three open standards, the Open Publication Structure (OPS), Open Packaging Format (OPF) and Open Container Format (OCF), produced by the IDPF.</p>
             <p>More information on the ePub standard is available at the following websites:</p>
             <ul>
-                <li class="breakAll">http://www.idpf.org/epub/20/spec/OPS_2.0.1_draft.htm</li>
+                <li class="breakAll">http://www.idpf.org/epub/20/spec/OPS_2.0.1_draft.html</li>
                 <li class="breakAll">http://idpf.org/epub/20/spec/OCF_2.0.1_draft.doc</li>
             </ul>
             <p>Publishers not familiar with the ePub specification should follow the above links to learn more about the file format and container requirements.</p>
