--- a/listPage_allBestsellers_25.html
+++ b/listPage_allBestsellers_25.html
@@ -414,7 +414,7 @@
             </li> 
 
             <li>
-                <a href=detailtPage_fiction_Horror_LoneWomen.html">
+                <a href="detailPage_fiction_Horror_LoneWomen.html">
                     <img src="images/li_Bs100_29.png" alt="Lone Women: A Novel">
                     <b>Lone Women: A Novel</b>
                     <mark>$24.30</mark>
@@ -581,7 +581,7 @@
         </div>
         <div>
             <div>
-                <h2><img src="images/footerlogo.png" alt="BarnesandNoble"></h2>
+                <h2><img src="images/d_main__Footer_logo.png" alt="BarnesandNoble"></h2>
                 <div>
                     <h3>
                         SIGN UP FOR SAVINGS, NEWS, AND UPDATES
