1차 expand오류 수정

--- a/detailPage_teen_Thrillers_KillerInstinct.html
+++ b/detailPage_teen_Thrillers_KillerInstinct.html
@@ -286,24 +286,25 @@
                 <ul class="mainBookSlider">
                     <li class="active">
                         <img src="images/li_detail_suspense_11.png" alt="Killer Instinct Thumbnails 01" data-slide-index="0">  
-                        <input type="button" value="expandBook" data-panel="Killer Instinct expandPanel01">
+                        <input type="button" value="expandBook" data-panel="expandPanel01">
                     </li>
                     <li>
                         <img src="images/li_detail_suspense_08_int01.png" alt="Killer Instinct Thumbnails 02" data-slide-index="1">  
-                        <input type="button" value="expandBook" data-panel="Killer Instinct expandPanel02">
+                        <input type="button" value="expandBook" data-panel="expandPanel02">
                     </li>
                     <li>
                         <img src="images/li_detail_suspense_08_int02.png" alt="Killer Instinct Thumbnails 03" data-slide-index="2">  
-                        <input type="button" value="expandBook" data-panel="Killer Instinct expandPanel03">
+                        <input type="button" value="expandBook" data-panel="expandPanel03">
                     </li>
                     <li>
                         <img src="images/li_detail_suspense_08_int03.png" alt="Killer Instinct Thumbnails 04" data-slide-index="3">  
-                        <input type="button" value="expandBook" data-panel="Killer Instinct expandPanel04">
+                        <input type="button" value="expandBook" data-panel="expandPanel04">
                     </li>
                 </ul>
                 
                 <ol class="thumbNailSlider">
                     <li class="active">
+
                         <a href="#" data-slide-index="0"><img src="images/li_detail_suspense_11.png" alt="Killer Instinct Thumbnails 01"></a>
                     </li>
                     <li>
@@ -318,7 +319,7 @@
                 </ol>
                 <div class="expandPanel">
                     <div id="expandPanel01">
-                        <img src="images/li_detail_suspense_11.png" alt="Killer Instinct expandBook 01">
+                        <img src="images/li_detail_suspense_11.png" alt="Killer Instinct expandBook 1">
                         <input type="button" value="X" class="btn_close">
                     </div>
                     <div id="expandPanel02">
