Nook Quickhelp 수정 2차

--- a/quickHelp_HelpCenter_nookSupport_myRegisterndDevices.html
+++ b/quickHelp_HelpCenter_nookSupport_myRegisterndDevices.html
@@ -281,13 +281,20 @@
         </div>
     </header>
     <!-- *Header FIn -->
-    <div class="quickHelpContainer quickHelpContentContainer">
+    <div class="quickHelpContainer quickHelpContentContainer quickHelpdeviceContainer">
         <div>
             <h2>B&amp;N Help Center</h2>
         </div>
-
+        <div>
+            <h3>
+                Trying to Register Your NOOK?
+            </h3>
+            <span>
+                <a href="quickHelp_HelpCenter_nookSupport.html">Register a NOOK Device</a>
+            </span>
+        </div>
     </div>
-    
+
     <footer>
         <div>
             <p>
